--- a/RequestResponseModels/RequestResponseModels.csproj
+++ b/RequestResponseModels/RequestResponseModels.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="User\Request\" />
+    <Folder Include="User\Response\" />
+  </ItemGroup>
+
 </Project>
