--- a/RequestResponseModels/RequestResponseModels.csproj
+++ b/RequestResponseModels/RequestResponseModels.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="User\Request\" />
     <Folder Include="User\Response\" />
+    <Folder Include="Watcher\Response\" />
   </ItemGroup>
 
 </Project>
