Random string hidden

--- a/InternshipProject#2/appsettings.json
+++ b/InternshipProject#2/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "aB5G7HjL3kR8xY0qP9eF2wZI6mN1cV4XoE5bD9A"
+  "JwtSettings": {
+    "SecretKey": "aB5G7HjL3kR8xY0qP9eF2wZI6mN1cV4XoE5bD9A"
   }
 }
