Feature/user/login (#7)
* Login Commit

* asd

* Login finished

* Deleted middleware

* Removed empty classes, removed unnecessary references.

* Renamed Token

* .

* Changes to names,  hashing, still working on correct mapping

* .

* Redid login response

* Random string hidden

* variable names changed

--- a/InternshipProject#2/appsettings.json
+++ b/InternshipProject#2/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "aB5G7HjL3kR8xY0qP9eF2wZI6mN1cV4XoE5bD9A"
+  }
 }
