--- a/InternshipProject#2/InternshipProject#2.csproj
+++ b/InternshipProject#2/InternshipProject#2.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>InternshipProject_2</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
