Feature/watcher/watch ticket (#24)
* .

* Configure Manager

* .

* Configured Controller

* ..

* Merge with master

* .

* .

* Updated program.cs

* Re-did unit test

*  Re-did unit test

*  Re-did unit test

* fixing unit test

* interface update

*  Re-did unit test

* Re-did watcher manager and unit test

* deleted unnecessary usings

* Redid user validation

--- a/RequestResponseModels/RequestResponseModels.csproj
+++ b/RequestResponseModels/RequestResponseModels.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="User\Request\" />
+    <Folder Include="User\Response\" />
+    <Folder Include="Watcher\Response\" />
+  </ItemGroup>
+
 </Project>
