adaugat notificari din 5 in 5 minute

--- a/InternshipProject#2/appsettings.json
+++ b/InternshipProject#2/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "SecretKey": "aB5G7HjL3kR8xY0qP9eF2wZI6mN1cV4XoE5bD9A"
+  },
+  "SmtpSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "InternshipProject2@Lateral.com",
+    "SmtpPassword": "password"
   }
 }
