UploadAttachements to Storage and Database

--- a/InternshipProject#2/InternshipProject#2.csproj
+++ b/InternshipProject#2/InternshipProject#2.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Attachements\IssueTracker.FileSystem\FileSystem.csproj" />
     <ProjectReference Include="..\RequestResponseModels\RequestResponseModels.csproj" />
   </ItemGroup>
 
